--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ charset-normalizer==3.3.2
 cryptography==42.0.2
 defusedxml==0.8.0rc2
 Django==5.0.2
+django-cors-headers==4.3.1
 django-debug-toolbar==4.3.0
 django-filter==23.5
 django-templated-mail==1.1.1
